src/objects/sma__MATerritoryAggregation__c.object
<CustomObject>
    <fields>
        <fullName>sma__Avg__c</fullName>
        <label>Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MAIOAggregatorKey__c</fullName>
        <label>MAIO Aggregator Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MATerritoryAggregationSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MA Territory Aggregation Setting</label>
        <referenceTo>sma__MATerritoryAggregationSetting__c</referenceTo>
        <relationshipLabel>MapAnything Territory Aggregations</relationshipLabel>
        <relationshipName>MATerritoryAggregations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__MATerritoryLayer__c</fullName>
        <label>MapAnything Territory Layer</label>
        <referenceTo>sma__MALayer__c</referenceTo>
        <relationshipLabel>MapAnything Territory Aggregations</relationshipLabel>
        <relationshipName>MATerritoryAggregations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__MATerritoryNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Territory Node</label>
        <referenceTo>sma__MATerritoryNode__c</referenceTo>
        <relationshipLabel>MapAnything Territory Aggregations</relationshipLabel>
        <relationshipName>MATerritoryAggregations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Reason__c</fullName>
        <label>Deactivation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Sum__c</fullName>
        <label>Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MapAnything Territory Aggregation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Aggregations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>